--- a/css/all.css
+++ b/css/all.css
@@ -12,6 +12,8 @@ body {
     font-family: 'Commissioner', sans-serif;
     font-size: 16px;
     overflow-x: hidden;
+    max-width: 100%;
+    position: relative;
 }
 
 p {
@@ -1307,8 +1309,10 @@ h3 {
 
 
 @media screen and (max-width: 767px) {
+
     h3 {
         max-width: 360px;
+        margin: auto;
     }
 
     #absolutedHamburger {
@@ -1415,7 +1419,7 @@ h3 {
 
     #main {
         width: 100%;
-        max-width: 360px;
+        max-width: unset;
         /* background-color: red; */
         margin: auto;
         position: relative;
@@ -1473,7 +1477,8 @@ h3 {
     }
 
     .swiper-container {
-        width: 360px;
+        width: 100%;
+        max-width: 768px;
         height: 400px;
         margin-top: 20px;
         /* overflow: visible !important;
