--- a/css/all.css
+++ b/css/all.css
@@ -49,7 +49,9 @@ h3 {
 }
 
 .notDisplay {
-    display: none;
+    height: 0 !important;
+    overflow: hidden;
+    transition: 1s;
 }
 
 
@@ -58,12 +60,14 @@ h3 {
 
 #absolutedHamburger {
     width: 100%;
-    height: 100%;
+    height: 0%;
     position: fixed;
     top: 0;
     left: 0;
     background-color: #F5F6F9;
     z-index: 3;
+    transition: 1s;
+    overflow: hidden;
 }
 
 #absolutedHamburger #lang {
@@ -94,19 +98,34 @@ h3 {
 }
 
 #absolutedHamburgerClose {
-    margin: 0;
-    padding: 0;
-    font-size: 24px;
+    display: block;
+    width: 24px;
+    height: 12px;
     position: absolute;
-    top: 12px;
-    right: 25px;
-    font-weight: 300;
+    top: 22px;
+    right: 24px;
     cursor: pointer;
-    transition: .2s;
 }
 
-#absolutedHamburgerClose:hover {
-    color: #492C9C;
+.absolutedHamburgerCloseContent {
+    width: 24px;
+    height: 3px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #2997EE;
+    transition: .5s;
+    transition-delay: .2s;
+}
+
+.absolutedHamburgerCloseContent:last-child {
+    bottom: 0;
+    top: unset;
+    transform-origin: left;
+}
+
+.absolutedHamburgerClose:hover .absolutedHamburgerCloseContent{
+    background-color: #492C9C;
     transition: .2s;
 }
 
@@ -205,7 +224,7 @@ h3 {
 #navPersonal {
     position: absolute;
     top: 30px;
-    right: 75px;
+    right: 90px;
     width: 150px;
     height: 30px;
 }
@@ -286,7 +305,7 @@ h3 {
 
 .soldText {
     width: max-content;
-    max-width: 550px;
+    /* max-width: 550px; */
     height: max-content;
     margin: auto;
     margin-top: 50px;
@@ -311,6 +330,7 @@ h3 {
     font-size: 16px;
     line-height: 28px;
     letter-spacing: .03em;
+    max-width: 550px;
 }
 
 /* main input */
@@ -929,6 +949,47 @@ h3 {
     left: 24px;
 }
 
+/* missed animated button */
+
+.animatedButton {
+    width: max-content;
+    border-left: 2px solid #E1E3EC;
+    height: max-content;
+    float: right;
+    clear: right;
+    line-height: 30px;
+    font-weight: 600;
+    text-align: center;
+    cursor: pointer;
+    position: relative;
+}
+
+.animatedButton p{
+    position: relative;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    line-height: 20px;
+}
+
+.animatedButtonEnter {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 0;
+    background-color: #E1E3EC;
+    transition: .3s;
+    z-index: 0;
+}
+
+
+.animatedButton:hover  .animatedButtonEnter{
+    width: 100%;
+    transition: .3s;
+}
+
 /* vars */
 
 .blue {
@@ -977,7 +1038,12 @@ h3 {
 @media screen and (max-width: 1365px) {
 
     h3 {
+        font-size: 24px;
         max-width: 768px;
+    }
+
+    #absolutedHamburger {
+        height: 100%;
     }
 
     #hamburger {
@@ -1138,6 +1204,7 @@ h3 {
         padding-top: 12px;
         padding-bottom: 20px;
         position: relative;
+        margin-top: 42px;
     }
     
     #mainInputBlock .input {
@@ -1341,7 +1408,7 @@ h3 {
     }
     
     #absolutedHamburgerContent {
-        width: 360px;
+        width: 100%;
         height: 100%;
         margin: auto;
         position: relative;
@@ -1350,23 +1417,6 @@ h3 {
     
     #absolutedHamburgerContent #navPersonal{
         z-index: 4;
-    }
-    
-    #absolutedHamburgerClose {
-        margin: 0;
-        padding: 0;
-        font-size: 24px;
-        position: absolute;
-        top: 12px;
-        right: 25px;
-        font-weight: 300;
-        cursor: pointer;
-        transition: .2s;
-    }
-    
-    #absolutedHamburgerClose:hover {
-        color: #492C9C;
-        transition: .2s;
     }
     
     .absolutedHamburgerText {
@@ -1393,6 +1443,7 @@ h3 {
         padding-left: 25px;
         padding-top: 160px;
         position: absolute;
+        left: calc(50% - 100px);
     }
 
     .absolutedHamburgerText:nth-child(2) {
