--- a/css/all.css
+++ b/css/all.css
@@ -11,7 +11,7 @@ body {
     background-color: #F5F6F9;
     font-family: 'Commissioner', sans-serif;
     font-size: 16px;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
     max-width: 100%;
     position: relative;
 }
@@ -39,6 +39,8 @@ h3 {
 
 * {
     box-sizing: border-box;
+    outline: none;
+    user-select: none;
 }
 
 #main {
@@ -51,7 +53,7 @@ h3 {
 .notDisplay {
     height: 0 !important;
     overflow: hidden;
-    transition: 1s;
+    transition: .5s;
 }
 
 
@@ -66,7 +68,7 @@ h3 {
     left: 0;
     background-color: #F5F6F9;
     z-index: 3;
-    transition: 1s;
+    transition: .5s;
     overflow: hidden;
 }
 
@@ -224,7 +226,7 @@ h3 {
 #navPersonal {
     position: absolute;
     top: 30px;
-    right: 90px;
+    right: 60px;
     width: 150px;
     height: 30px;
 }
@@ -352,6 +354,7 @@ h3 {
     justify-content: center;
     z-index: 1;
     position: relative;
+    box-shadow: 0px 8px 16px rgba(51, 51, 98, 0.04);
 }
 
 #mainInputBlock .input {
