--- a/css/carSelect.css
+++ b/css/carSelect.css
@@ -233,11 +233,17 @@
 
 .categoryInputMarker {
     position: absolute;
-    top: 15px;
-    right: 15px;
-    color: #2997EE;
-    font-size: 18px;
-    line-height: 10px;
+    top: 24px;
+    right: 20px;
+    width: 9px;
+    height: 5px;
+}
+
+.categoryInputMarker img{
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 .categoryInputContent {
@@ -331,7 +337,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    height: 26px;
+    height: 25px;
     width: 25px;
     background-color:  #D6D8E6;
     border-radius: 50%;
