--- a/css/carSelect.css
+++ b/css/carSelect.css
@@ -179,11 +179,11 @@
     max-height: 50px;
     overflow: hidden;
     margin-bottom: 16px;
-    transition: .5s;
+    transition: .3s;
 }
 
 .activeCategoryInputContainer {
-    transition: .4s;
+    transition: .8s;
     max-height: 300px;
     /* overflow: visible; */
 }
@@ -288,6 +288,10 @@
 }
 
 /* Customize the label (the container) */
+.container:nth-child(8) {
+    margin-top: 30px;
+  }
+
 .container {
     margin: auto;
     display: block;
