--- a/css/all.css
+++ b/css/all.css
@@ -859,6 +859,7 @@ h3 {
     justify-content: center;
     overflow: auto;
     padding-top: calc(50vh - 230px - 50px);
+    overflow-y: scroll;
 }
 
 .regAbsoluted {
