--- a/css/carPage.css
+++ b/css/carPage.css
@@ -37,14 +37,28 @@
     background-repeat: no-repeat;
     border-radius: 16px;
     transition: opacity .2s;
+    overflow: hidden;
 }
 
-.galleryMain:hover .galleryMainController {
+.gallery-main-swiper-container {
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+.gallery-main-swiper-container .swiper-slide{
+    width: 100% !important;
+    height: 100% !important;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+.carGallery:hover .galleryMainController {
     transition: .3s;
     opacity: .7;
 }
 
-.galleryMain .galleryMainController:hover {
+.carGallery .galleryMainController:hover {
     transition: .3s;
     opacity: 1;
 }
@@ -56,22 +70,23 @@
     font-size: 26px;
     line-height: 26px;
     cursor: pointer;
+    z-index: 3;
 }
 
 /* .galleryMainController:hover {
     color: #2997EE;
 } */
 
-.galleryMainController:nth-child(1) {
-    position: absolute;
-    left: 20px;
-    top: calc(50% - 13px);
-}
-
 .galleryMainController:nth-child(2) {
     position: absolute;
+    left: 20px;
+    top: calc(50%);
+}
+
+.galleryMainController:nth-child(3) {
+    position: absolute;
     right: 20px;
-    top: calc(50% - 13px);
+    top: calc(50%);
 }
 
 /* .galleryMain img{
