--- a/css/all.css
+++ b/css/all.css
@@ -1537,6 +1537,127 @@ h3 {
     color: #C30052;
 }
 
+/* account nav */
+
+.accountNavBlock {
+    margin-top: 30px;
+    width: 500px;
+    height: 100px;
+}
+
+.accountNavMain {
+    width: max-content;
+    height: max-content;
+}
+
+.accountNavMain p {
+    background: linear-gradient(270deg, #2A97F0 47.92%, #4F4CFD 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-weight: bold;
+    font-size: 28px;
+    /* identical to box height */
+    letter-spacing: 0.03em;
+}
+
+.accountNavContent {
+    border-bottom: 1px solid #E1E2EC;
+    width: max-content;
+    height: max-content;
+    margin-left: 50px;
+    margin-top: 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 10px;
+}
+
+.accountNavElem {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 20px;
+    /* identical to box height */
+
+    text-align: center;
+    letter-spacing: 0.02em;
+
+    /* light grey */
+
+    color: #7993AF;
+    margin-left: 22px;
+    transition: .2s;
+    cursor: pointer;
+    padding-bottom: 10px;
+    border-bottom: 1px solid rgba(225, 226, 236, 0);
+    height: 30px;
+    padding-left: 14px;
+    padding-right: 14px;
+}
+
+.accountNavElem:hover {
+    transition: .2s;
+    color: #2997EE;
+    border-bottom: 1px solid #2997EE;
+}
+
+.accountNavElem:nth-child(1) {
+    margin-left: 0px;
+}
+
+.accountCarName {
+    width: 100%;
+    height: max-content;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 28px;
+    line-height: 28px;
+    /* identical to box height, or 100% */
+
+    letter-spacing: 0.03em;
+
+    /* dark grey */
+
+    color: #07273F;
+}
+
+/* chat */
+
+.chat {
+    width: 460px;
+    height: max-content;
+    position: relative;
+}
+
+.chat .accountCarName {
+    margin-top: 40px;
+    margin-bottom: 24px;
+    display: none;
+}
+
+.chatContent {
+    width: 460px;
+    height: 535px;
+    background: #FFFFFF;
+    box-shadow: 0px 8px 16px rgba(17, 17, 17, 0.04);
+    border-radius: 16px;
+}
+
+.chatHint {
+    width: 460px;
+    text-align: center;
+    margin-top: 14px;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+    letter-spacing: 0.02em;
+
+    /* light grey */
+
+    color: #7993AF;
+}
+
 /* vars */
 
 .blue {
@@ -1613,6 +1734,14 @@ h3 {
     h3 {
         font-size: 24px;
         max-width: 768px;
+    }
+
+    .chat .accountCarName {
+        display: block;
+    }
+
+    .bookingContent .accountCarName {
+        display: none;
     }
 
     #absolutedHamburger {
@@ -1882,7 +2011,7 @@ h3 {
     }
 
     #footer {
-        width: 768px;
+        width: 728px;
     }
     
     #footerContent {
@@ -1914,7 +2043,7 @@ h3 {
     }
 
     #footerLine {
-        width: 768px;
+        width: 728px;
         height: 0.5px;
         position: absolute;
         top: 50px;
