--- a/css/all.css
+++ b/css/all.css
@@ -2094,6 +2094,73 @@ h3 {
 
 @media screen and (max-width: 767px) {
 
+    
+    .accountNavBlock {
+        margin-top: 30px;
+        width: 312px;
+        height: 100px;
+    }
+    
+    .accountNavMain {
+        width: max-content;
+        height: max-content;
+    }
+    
+    .accountNavMain p {
+        font-size: 24px;
+    }
+    
+    .accountNavContent {
+        margin-left: 0px;
+    }
+    
+    .accountNavElem {
+        font-size: 14px;
+        padding-left: 6px;
+        padding-right: 6px;
+        margin-left: 13px;
+    }
+    
+    .accountCarName {
+        font-size: 24px;
+    }
+
+    .chat {
+        width: 312px;
+        height: max-content;
+        position: relative;
+        margin-top: 20px;
+    }
+    
+    .chat .accountCarName {
+        margin-top: 40px;
+        margin-bottom: 24px;
+        display: none;
+    }
+    
+    .chatContent {
+        width: 312px;
+        height: 535px;
+        background: #FFFFFF;
+        box-shadow: 0px 8px 16px rgba(17, 17, 17, 0.04);
+        border-radius: 16px;
+    }
+    
+    .chatHint {
+        width: 312px;
+        text-align: center;
+        margin-top: 14px;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 17px;
+        letter-spacing: 0.02em;
+    
+        /* light grey */
+    
+        color: #7993AF;
+    }
+
     .logged .loggedEnter {
         margin-right: 80px;
     }
