--- a/css/all.css
+++ b/css/all.css
@@ -2390,6 +2390,8 @@ h3 {
 
     .swiper-slide {
         width: 286px !important;
+        margin-right: 10px;
+        margin-left: 10px;
         box-shadow: 0px 8px 16px rgba(51, 51, 98, 0.04);
         background-color: #fff;
         border-radius: 16px;
