--- a/css/booking.css
+++ b/css/booking.css
@@ -90,6 +90,7 @@
 }
 
 .bookingDateInput input {
+    font-family: 'Commissioner', sans-serif;
     width: 100px;
     height: 20px;
     border: none;
@@ -107,6 +108,7 @@
 }
 
 .bookingDateInput input::placeholder {
+    font-family: 'Commissioner', sans-serif;
     width: 100px;
     height: 20px;
     border: none;
