--- a/css/carSelect.css
+++ b/css/carSelect.css
@@ -482,5 +482,10 @@
         margin-top: -60px;
         margin-bottom: 100px;
     }
+
+    #selectMain .swiperSlideName{
+        margin-top: -70px;
+    }
+    
   
 }
